# tinyRPC

./: .gitignore  CMakeLists.txt  README.md  make.sh
include/benchmark/: benchmark.h
include/google/protobuf/stubs/: logging.h
lib/protobuf-3.4.1/: protobuf.build.ninja  protobuf.incchk  protobuf.incchk.details  protobuf_lite.build.ninja  protobuf_lite.incchk  protobuf_lite.incchk.details  protoc.build.ninja  protoc.incchk  protoc.incchk.details  protoc_lib.build.ninja  protoc_lib.incchk  protoc_lib.incchk.details
lib/protobuf-3.4.1/protobuf.objs/src/google/protobuf/: any.cc.o.H  any.pb.cc.o.H  api.pb.cc.o.H  descriptor.cc.o.H  descriptor.pb.cc.o.H  descriptor_database.cc.o.H  duration.pb.cc.o.H  dynamic_message.cc.o.H  empty.pb.cc.o.H  extension_set_heavy.cc.o.H  field_mask.pb.cc.o.H  generated_message_reflection.cc.o.H  generated_message_table_driven.cc.o.H  map_field.cc.o.H  message.cc.o.H  reflection_ops.cc.o.H  service.cc.o.H  source_context.pb.cc.o.H  struct.pb.cc.o.H  text_format.cc.o.H  timestamp.pb.cc.o.H  type.pb.cc.o.H  unknown_field_set.cc.o.H  wire_format.cc.o.H  wrappers.pb.cc.o.H
lib/protobuf-3.4.1/protobuf.objs/src/google/protobuf/compiler/: importer.cc.o.H  parser.cc.o.H
lib/protobuf-3.4.1/protobuf.objs/src/google/protobuf/io/: gzip_stream.cc.o.H  printer.cc.o.H  strtod.cc.o.H  tokenizer.cc.o.H  zero_copy_stream_impl.cc.o.H
lib/protobuf-3.4.1/protobuf.objs/src/google/protobuf/stubs/: mathlimits.cc.o.H  substitute.cc.o.H
lib/protobuf-3.4.1/protobuf.objs/src/google/protobuf/util/: delimited_message_util.cc.o.H  field_comparator.cc.o.H  json_util.cc.o.H  (+4 more)
lib/protobuf-3.4.1/protobuf_lite.objs/src/google/protobuf/: arena.cc.o.H  arenastring.cc.o.H  extension_set.cc.o.H  generated_message_table_driven_lite.cc.o.H  generated_message_util.cc.o.H  message_lite.cc.o.H  repeated_field.cc.o.H  wire_format_lite.cc.o.H
scripts/: make.sh
src/: CMakeLists.txt  gen_proto.sh  init.cpp  init.h
src/base/: CMakeLists.txt  Callback.h  Demangle.cc  Demangle.h  DependencyRegistry.h  DoublyLinkedList.h  DoublyLinkedListTest.cpp  EndPoint.cpp  EndPoint.h  Endian.h  Endpoint.cpp  Enum.h  ErasedPtr.h  ErasedPtrTest.cpp  Function.h  Handle.h  Hex.cpp  Hex.h  HexChars.h  IDAlloc.h  IndexAlloc.cpp  IndexAlloc.h  Latch.cpp  Latch.h  Logging.cpp  Logging.h  MaybeOwning.h  Random.h  ScopedDeferred.h  ScopedDeferredTest.cpp  Singleton.h  SpinLock.h  SpinLockTest.cpp  Status.cpp  Status.h  String.cpp  String.h  Tsc.h  TypeIndex.h  base.cpp  (+2 more)
src/base/internal/: LazyInit.h  Logging.cpp  Logging.h  Macro.h  NeverDestroyed.h
src/base/thread/: SpinLock.h  SpinLockTest.cpp
src/fiber/: CMakeLists.txt  ConditionalVariable.cpp  ConditionalVariable.h  ConditionalVariableTest.cpp  Fiber.cpp  Fiber.h  FiberLocal.h  FiberLocalTest.cpp  FiberTest.cpp  Latch.cpp  Latch.h  LatchTest.cpp  Mutex.h  Runtime.cpp  Runtime.h  Testing.h  ThisFiber.cpp  ThisFiber.h  ThisFiberTest.cpp  Timer.cpp  Timer.h  TimerTest.cpp
src/fiber/detail/: ContextBenchmark.cpp  FiberEntity.cpp  FiberEntity.h  FiberEntityTest.cpp  FiberWorker.cpp  FiberWorker.h  FiberWorkerTest.cpp  SchedulingGroup.cpp  SchedulingGroup.h  SchedulingGroupTest.cpp  StackAllocator.cpp  StackAllocator.h  TimerWorker.cpp  TimerWorker.h  TimerWorkerTest.cpp  Waitable.cpp  Waitable.h  WaitableTest.cpp  debug.cpp
src/init/: CMakeLists.txt  on_init.cpp  on_init.h
src/io/: Acceptor.h  CMakeLists.txt  Descriptor.cpp  Descriptor.h  DescriptorTest.cpp  EventLoop.cpp  EventLoop.h  EventLoopTest.cpp  StreamConnection.h
src/io/detail/: EintrSafe.cpp  EintrSafe.h  EventLoopNotifier.cpp  EventLoopNotifier.h  ReadAtMost.cpp  ReadAtMost.h  ReadAtMostTest.cpp  WatchDog.cpp  WatchDog.h  WatchDogTest.cpp  WritingBufferList.h  WritingBufferListTest.cpp  WrtingBufferList.cpp
src/io/native/: Acceptor.cpp  Acceptor.h  AcceptorTest.cpp  StreamConnection.cpp  StreamConnection.h  StreamConnectionTest.cpp
src/io/util/: Socket.cpp  Socket.h  SocketTest.cpp  StreamIO.h
src/rpc/: CMakeLists.txt  MessageDispatcherFactory.cpp  MessageDispatcherFactory.h  Server.cpp  Server.h  message_dispatcher  rpcChannel.h  rpcClientController.h  rpcServerController.h  rpc_options.pb.cc  rpc_options.pb.h  rpc_options.proto
src/rpc/internal/: CMakeLists.txt  CorrelationID.h  CorrelationMap.h  NormalConnectionHandler.cpp  NormalConnectionHandler.h  ServerConnectionHandler.h  ShardedCallMap.h  StreamCallGate.cpp  StreamCallGate.h  StreamCallGateHandle.cpp  StreamCallGateHandle.h
src/rpc/load_balancer/: CMakeLists.txt  LoadBalancer.cpp  LoadBalancer.h  RoundRobin.cpp  RoundRobin.h
src/rpc/message_dispatcher/: CMakeLists.txt  Composited.cpp  Composited.h  MessageDispatcher.cpp  MessageDispatcher.h
src/rpc/name_resolver/: CMakeLists.txt  List.cpp  List.h  ListTest.cpp  NameResolver.cpp  NameResolver.h  NameResolverImpl.cpp  NameResolverImpl.h  NameResolverImplTest.cpp  NameResolverUpdater.cpp  NameResolverUpdater.h
src/rpc/name_resolver/util/: DomainNameResolver.cpp  DomainNameResolver.h  DomainNameResolverTest.cpp
src/rpc/protocol/: Controller.cpp  Controller.h  Message.cpp  Message.h  StreamProtocol.cpp  StreamProtocol.h  StreamService.h
src/rpc/protocol/protobuf/: CMakeLists.txt  CallContext.cpp  CallContext.h  CallContextFactory.cpp  CallContextFactory.h  Message.cpp  Message.h  MockChannel.h  Service.cpp  Service.h  ServiceMethodLocator.cpp  ServiceMethodLocator.h  ServiceMethodLocatorTest.cpp  rpcChannel.cpp  rpcChannel.h  rpcControllerClient.cpp  rpcControllerClient.h  rpcControllerCommon.cpp  rpcControllerCommon.h  rpcControllerServer.cpp  rpcControllerServer.h  rpcServerControllerTest.cpp  rpc_meta.pb.cc  rpc_meta.pb.h  rpc_meta.proto  stdProtocol.cpp  stdProtocol.h
src/rpc/protocol/protobuf/plugin/: CMakeLists.txt  basic_decl_generator.cc  basic_decl_generator.h  code_writer.h  names.cc  names.h  sync_decl_generator.cc  sync_decl_generator.h  v1_plugin.cc  v2_plugin.cc
src/testing/: CMakeLists.txt  Endpoint.cpp  Endpoint.h  echo_service.pb.cc  echo_service.pb.h  echo_service.proto  main.cpp  main.h
unittest/: CMakeLists.txt  GlogTest.cpp  glog_test.cpp
(+123 files in other folders)
